--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -9,5 +9,10 @@ spec:
     containers:
         - name: postgres-app
           image: postgres:9.4
+          env:
+            - name: POSTGRES_USER
+              value: "postgres"
+            - name:  POSTGRES_PASSWORD
+              value: "postgres"
           ports:
             - containerPort: 5432
