--- a/result-deployment.yml
+++ b/result-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: result-deployement
+  name: result-app-deployement
   labels:
     app: demo-voting-app
 spec:
@@ -12,13 +12,13 @@ spec:
       app: demo-voting-app
   template:
     metadata:
-    name: result-app-pod
-    labels:
-        name: result-app-pod
-        app: demo-voting-app                     
-    spec:
-        containers:
-            - name: result-app
-              image: dockersamples/examplevotingapp_result
-              ports:
-                - containerPort: 80
+      name: result-app-pod
+      labels:
+          name: result-app-pod
+          app: demo-voting-app                     
+      spec:
+          containers:
+              - name: result-app
+                image: dockersamples/examplevotingapp_result
+                ports:
+                  - containerPort: 80
